keycloak-odf/keycloak-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-odf-app
#  namespace: postgres-operator
  namespace: keycloak-odf
  labels:
    app.kubernetes.io/name: keycloak-odf-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak-odf-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak-odf-app
    spec:
      containers:
      - image: quay.io/keycloak/keycloak:latest
        name: keycloak
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
      restartPolicy: Always
