keycloak-odf/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
#  name: keycloak-odf
  name: frontend
  labels:
    name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak-odf-app
