keycloak-odf/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-odf
spec:
#  host: keycloak-odf.apps.ocpacm.ocstraining.com
  tls:
    termination: passthrough
  to:
    name: keycloak-odf
